--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,11 +1,13 @@
 <section class="todoapp">
   <header class="header">
     <h1>todos</h1>
+    <form id="new-form">
+      <input type="text" class="new-todo" />
+    </form>
   </header>
 
   <section class="main">
     <ul class="todo-list">
-
 
     </ul>
   </section>
@@ -14,6 +16,13 @@
 
 <script>
   $(function() {
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
+
+
     // The taskHtml method takes in a JavaScript representation
     // of the task and produces an HTML representation using
     // <li> tags
@@ -29,6 +38,10 @@
       return liElement;
     }
 
+    // toggleTask takes in an HTML representation of the
+    // an event that fires from an HTML representation of
+    // the toggle checkbox and  performs an API request to toggle
+    // the value of the `done` field
     function toggleTask(e) {
       var itemId = $(e.target).data("id");
 
