--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
   <header class="header">
     <h1>todos</h1>
     <form id="new-form">
-      <input type="text" class="new-todo" />
+      <input type="text" class="new-todo" placeholder="Get stuff done" />
     </form>
   </header>
 
@@ -11,4 +11,10 @@
 
     </ul>
   </section>
+</section>
+
+<section class="author">
+  A <%= link_to "todo-mvc", "http://todomvc.com" %>
+  application, built by
+  <%= link_to "Raj Sannidhi", "http://github.com/rajsannidhi" %>
 </section>
